fixed modal title sizing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -949,7 +949,9 @@ img.profPicHome {
       margin:0;
     }
     .modal-header{
-      overflow:auto;
+      height: auto;
+      font-size:8px;
     }
+
 
 }
